# Defrago

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml  run.bat  run_local.bat
.claude/: settings.local.json
.claude/agents/: doc-updater.md  security-reviewer.md  test-writer.md
.claude/hooks/: post-edit-lint.sh  pre-bash-guard.sh  session-branch-check.sh  stop-quality-gate.sh
.claude/skills/: coverage.md  doc-update.md  gui-test.md  logging.md  release-check.md  test-autofix.md
.github/workflows/: ci.yml  keepalive.yml
docs/: OPERATIONS.md  contact_gas_script.md
docs/design/: architecture.md  infrastructure.md
docs/requirements/: functional.md  non_functional.md
docs/specs/: feature_gtd.md
scripts/: install-hooks.sh
src/study_python/: logging_config.py
src/study_python/gtd/: __init__.py  app.py  models.py  repository.py  repository_protocol.py  settings.py
src/study_python/gtd/gui/: __init__.py  main_window.py  styles.py
src/study_python/gtd/gui/components/: __init__.py  dialogs.py  item_card.py  matrix_view.py
src/study_python/gtd/gui/widgets/: __init__.py  clarification.py  dashboard.py  inbox.py  organization.py  review.py  task_list.py
src/study_python/gtd/logic/: __init__.py  clarification.py  collection.py  execution.py  organization.py  review.py  trash.py
src/study_python/gtd/web/: __init__.py  app.py  auth.py  config.py  database.py  db_models.py  db_repository.py  dependencies.py  labels.py  run.py  template_engine.py
src/study_python/gtd/web/routers/: __init__.py  auth.py  clarification.py  dashboard.py  execution.py  iconbar.py  inbox.py  organization.py  review.py  settings_web.py  trash.py
src/study_python/gtd/web/static/: labels.json  releases.json
src/study_python/gtd/web/static/css/: style.css
src/study_python/gtd/web/templates/: base.html  clarification.html  dashboard.html  execution.html  inbox.html  login.html  organization.html  register.html  releases.html  review.html  settings.html  trash.html
src/study_python/gtd/web/templates/partials/: clarification_list.html  clarification_step.html  item_list.html  modal_achievements.html  modal_contact.html  modal_help.html  modal_inbox.html  modal_inbox_detail.html  modal_tutorial.html  organization_form.html  plan_step.html  task_list.html  trash_list.html
tests/gtd/: test_models.py  test_repository.py  test_settings.py
tests/gtd/gui/: conftest.py  test_main_window.py
tests/gtd/logic/: conftest.py  test_clarification.py  test_collection.py  test_execution.py  test_organization.py  test_review.py  test_tenant_isolation.py  test_trash.py
tests/gtd/web/: conftest.py  test_auth.py  test_dashboard.py  test_db_repository.py  test_execution_router.py  test_iconbar.py  test_inbox.py
