[project]
name = "study-python"
version = "0.1.0"
description = "GTD タスク管理 Web アプリケーション"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = ["python", "gtd", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
    "pre-commit>=3.6.0",
    "httpx>=0.27.0",
]

[project.scripts]
mindflow-web = "study_python.gtd.web.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/study_python"]

# =============================================================================
# Ruff - Linter & Formatter (PEP 8準拠)
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "RUF001",  # ambiguous unicode (Japanese fullwidth chars)
    "RUF002",  # ambiguous unicode in docstring
    "RUF003",  # ambiguous unicode in comment
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",    # Unused arguments are common in tests (fixtures)
    "PLR2004", # Magic values are acceptable in tests
    "PLC0415", # Dynamic imports in test setup
]
"src/study_python/gtd/logic/**/*.py" = [
    "TCH",    # Logic modules need runtime imports
]
"src/study_python/gtd/web/**/*.py" = [
    "TCH",    # Web modules need runtime imports for FastAPI DI
    "B008",   # Depends() in defaults is standard FastAPI pattern
    "ARG001", # FastAPI lifespan receives app argument
    "PLC0415", # Dynamic imports in middleware/run
]
"src/study_python/gtd/repository_protocol.py" = [
    "TCH",    # Protocol needs runtime imports
]
"src/study_python/logging_config.py" = [
    "SIM108", # Existing code pattern preserved
]

[tool.ruff.lint.isort]
known-first-party = ["study_python"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# =============================================================================
# MyPy - 型チェック
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

# サードパーティライブラリの型スタブがない場合の設定
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# =============================================================================
# Pytest - テスト
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# =============================================================================
# Coverage - カバレッジ
# =============================================================================
[tool.coverage.run]
source = ["src/study_python"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "src/study_python/gtd/web/run.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 75
show_missing = true
